# kowiescript

./: README.md  ks.ebnf
kowiescript/: Cargo.toml
kowiescript/src/: interpreter.rs  io.rs  lexer.rs  lib.rs  parser.rs
kowiescript/src/data/: test_file.ks
kowiescript/src/lexer/: mod.rs  token.rs
kowiescript/src/parser/: ast.rs  mod.rs
kowiescript/src/tests/data/: basic_file.ks  escape_characters.ks  fib.ks  input.ks  lines.ks  parent_expression_parse.ron  parse_if_in_if.ron  parse_if_in_if.ron.bak  parse_if_simple.ron  parse_if_simple_w_block.ron  pattern.ks  simple_parse.ron  test.ron  test.ron.bak  test_file.ks  test_parse_fib_program.ron  test_parse_fib_program.ron.bak  test_parse_match_simple.ron  test_parse_match_simple.ron.bak  test_parse_pattern_program.ron  test_parse_vecs_and_strs.ron  test_parse_vecs_and_strs.ron.bak  test_parse_vector.ron  vecs_and_strs.ks
