[package]
name = "kowiescript"
version = "0.9.0"
edition = "2021"
authors = ["Jakub Kowieski <jkowiesk@gmail.com>"]
description = "My simple programing language written in rust"
repository = "https://github.com/jkowiesk/kowiescript"

[dependencies]
serde = { version = "1", features = ["derive"] }
ron = "0.8"